# soapix

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
soapix/: __init__.py  __init__.pyi  __main__.py  cache.py  client.py  client.pyi  exceptions.py  transport.py
soapix/codegen/: __init__.py  generator.py
soapix/docs/: examples.py  exporters.py  generator.py  resolver.py  terminal.py
soapix/playground/: __init__.py  server.py  ui.py
soapix/wsdl/: namespace.py  parser.py  resolver.py  types.py
soapix/xml/: builder.py  parser.py
tests/: test_builder_advanced.py  test_cache.py  test_codegen.py  test_docs.py  test_exceptions.py  test_namespace.py  test_resolver.py  test_tolerant_engine.py  test_transport.py  test_wsdl_parser.py  test_xml_builder.py  test_xml_parser.py
tests/fixtures/: any_attribute.wsdl  any_type.wsdl  attribute_group.wsdl  deep_import.wsdl  duplicate_port.wsdl  element_ref.wsdl  fault_message.wsdl  gib_efatura.wsdl  http_address.wsdl  import_no_namespace.xsd  import_types.xsd  import_wsdl.wsdl  inline_anonymous.wsdl  max_occurs.wsdl  named_groups.wsdl  named_simple_type.wsdl  namespace_quirks.wsdl  nillable.wsdl  no_service.wsdl  no_types.wsdl  qualified_form.wsdl  restriction_base.wsdl  restriction_no_prefix.wsdl  rpc_encoded.wsdl  rpc_literal.wsdl  simple.wsdl  soap12.wsdl  type_extension.wsdl  wrapped.wsdl  xs_all.wsdl  xs_attribute.wsdl  xs_choice.wsdl  xs_list.wsdl
