[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soapix"
version = "0.2.6"
description = "A tolerant, self-documenting Python SOAP client library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["soap", "wsdl", "xml", "webservice", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "twine>=5.0.0",
    "build>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=soapix --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["soapix"]
include = ["soapix/py.typed", "soapix/**/*.pyi"]

[tool.mypy]
python_version = "3.10"
strict = true
